# confidentialBrowserHistory

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: Dockerfile  api.py  chroma_db_adapter.py  mcp_server.py  model.py  pyproject.toml  settings.py  utils.py  vectorstore_port.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js
